Fix trix editor toolbar button on small screens

--- a/app/assets/stylesheets/activeadmin_bootstrap/components/_trix_editor.scss
+++ b/app/assets/stylesheets/activeadmin_bootstrap/components/_trix_editor.scss
@@ -6,6 +6,7 @@ trix-editor {
 trix-toolbar {
   .trix-button-row {
     flex-wrap: wrap !important;
+    justify-content: flex-start !important;
   }
 
   .trix-button-group {
